# MMPlayer

./: CMakeLists.txt  README.md
doc/: ffmpeg.drawio
test/: test.cpp
xxAV/: CMakeLists.txt  xxAV.h  xxAVDecoder.cpp  xxAVDecoderPrivate.h  xxAVFrame.cpp  xxAVFramePrivate.h  xxAVPacket.cpp  xxAVPacketPrivate.h  xxAVReader.cpp  xxAVReaderPrivate.h  xxAVStream.cpp  xxAVStreamPrivate.h  xxAVTime.cpp
xxGL/: xxGL.hpp  xxGLVAO.cpp
xxPlayer/: CMakeLists.txt  xxPlayer.cpp  xxPlayer.h  xxPlayerAudioThread.cpp  xxPlayerCtr.cpp  xxPlayerDecoderThread.cpp  xxPlayerPushAudioThread.cpp  xxPlayerPushRenderThread.cpp  xxPlayerReaderThread.cpp  xxPlayerRenderThread.cpp
xxPlayerTest/: CMakeLists.txt  main.cpp  test.cpp
xxQueue/: xxQueue.h
xxThread/: CMakeLists.txt  xxThread.cpp  xxThread.h
xxThreadPool/: xxThreadPool.h
